fixed toggle motion webcam output bug and added whitespace to bottom

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,11 +20,20 @@
     background-color: #C1F2F7;
 }
 
-/* motion detection debug */
-video, canvas {
+/* motion detection */
+#motionVideo, #motionCanvas {
     width: 480px;
     height: 360px;
-    background-color: #999;
+    background-color: white;
+    position: fixed;
+    top: 200px;
+    right: 0px;
+ }
+ 
+#calibrate {
+    position: fixed;
+    top: 600px;
+    right: 0px;
 }
 
 #chordPics {
